service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: awx-service
  namespace: awx
spec:
  selector:
    app.kubernetes.io/name: awx-web
    app.kubernetes.io/component: awx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8052
  type: ClusterIP
